--- a/.gitconfig
+++ b/.gitconfig
@@ -4,8 +4,8 @@
 [color]
 	ui = true
 [core]
-	autocrlf = input
-  filemode = false
+  autocrlf = input
+  fileMode = false
 [grep]
 	lineNumber = true
 [alias]
