--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,8 @@ setw -g pane-base-index 1
 setw -g monitor-activity on
 set -g visual-activity on
 
+source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
+
 # ============================================
 # Key bindings
 # ============================================
