--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,7 @@
   autocrlf = input
   fileMode = false
   excludesfile = ~/.gitignore
+  ;pager = bash -lc 'diff-highlight | strip_diff_leading_symbols | less -r' -
 
 [grep]
 	lineNumber = true
@@ -27,6 +28,12 @@
   old = 009 bold
   new = green bold
   whitespace = red reverse
+
+[color "diff-highlight"]
+  oldNormal = "red bold"
+  oldHighlight = "red bold 52"
+  newNormal = "green bold"
+  newHighlight = "green bold 22"
 
 [color "status"]
   added = 154
