--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,6 +37,13 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+#bind-key -n ^[[27;5;49~ select-window -t 1
+
+#bind-key -n C-0 select-window -t :0
+bind-key -n C-1 select-window -t 1
+bind-key -n C-2 select-window -t 2
+bind-key -n C-2 select-window -t 3
+
 # Ctrl-1,2,..,5 for tabs
 #bind-key -n 1 select-window -t 1
 #bind-key -n 2 select-window -t 2
