--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,8 @@
   autocrlf = input
   fileMode = false
   excludesfile = ~/.gitignore
+  ; Require npm install -g diff-so-fancy
+  pager = diff-so-fancy | less --tabs=4 -RFX
   ;pager = bash -lc 'diff-highlight | strip_diff_leading_symbols | less -r' -
 
 [grep]
