--- a/.eslintrc
+++ b/.eslintrc
@@ -7,9 +7,12 @@
 
   "plugins": ["react"],
 
-	"parserOptions": {
-		"sourceType": "module"
-	},
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
 
   "ecmaFeatures": {
     "arrowFunctions": true,
@@ -164,7 +167,7 @@
     "func-names": 0, // require function expressions to have a name (off by default)
     "func-style": 0, // enforces use of function declarations or expressions (off by default)
     "key-spacing": [1, {"beforeColon": false, "afterColon": true}], // enforces spacing between keys and values in object literal properties
-		"keyword-spacing": [2, {before: true}], // enforces consistent spacing around keywords and keyword-like tokens:
+    "keyword-spacing": [2, {before: true}], // enforces consistent spacing around keywords and keyword-like tokens:
     "max-nested-callbacks": [1, 3], // specify the maximum depth callbacks can be nested (off by default)
     "new-cap": [1, {newIsCap: true, capIsNew: false}], // require a capital letter for constructors
     "new-parens": 1, // disallow the omission of parentheses when invoking a constructor with no arguments
@@ -184,17 +187,15 @@
     "one-var": [1, "never"], // allow just one var statement per function (off by default)
     "operator-assignment": [1, "never"], // require assignment operator shorthand where possible or prohibit it entirely (off by default)
     "padded-blocks": [1, "never"], // enforce padding within blocks (off by default)
-    //"quote-props": [1, "as-needed"], // require quotes around object literal property names (off by default)
     "quote-props": [1, "as-needed"], // require quotes around object literal property names (off by default)
     "quotes": 0, // specify whether double or single quotes should be used
     "semi": [1, "always"], // require or disallow use of semicolons instead of ASI
     "semi-spacing": [1, {"before": false, "after": true}], // enforce spacing before and after semicolons
     "sort-vars": 0, // sort variables within the same declaration block (off by default)
-    //"space-after-keywords": [1, "always"], // require a space after certain keywords (off by default)
     "space-before-blocks": [1, "always"], // require or disallow space before blocks (off by default)
-    "space-before-function-paren": [1, {"anonymous": "always", "named": "never"}], // require or disallow space before function opening parenthesis (off by default)
+    "space-before-function-paren": 0,
+    //"space-before-function-paren": [1, {"anonymous": "always", "named": "never"}], // require or disallow space before function opening parenthesis (off by default)
     "space-in-parens": [1, "never"], // require or disallow spaces inside parentheses (off by default)
-    //"space-infix-ops": [1, "always"], // require spaces around operators
     "space-unary-ops": [1, {"words": true, "nonwords": false}], // Require or disallow spaces before/after unary operators (words on by default, nonwords off by default)
     "wrap-regex": 0, // require regex literals to be wrapped in parentheses (off by default)
 
@@ -231,6 +232,7 @@
     "react/jsx-sort-props": 0, // Enforce props alphabetical sorting
     "react/jsx-uses-react": 2, // Prevent React to be incorrectly marked as unused
     "react/jsx-uses-vars": 2, // Prevent variables used in JSX to be incorrectly marked as unused
+    "react/jsx-wrap-multilines": 2, // Prevent missing parentheses around multilines JSX
     "react/no-did-mount-set-state": 2, // Prevent usage of setState in componentDidMount
     "react/no-did-update-set-state": 2, // Prevent usage of setState in componentDidUpdate
     "react/no-multi-comp": 0, // Prevent multiple component definition per file
@@ -238,6 +240,5 @@
     "react/prop-types": 2, // Prevent missing props validation in a React component definition
     "react/react-in-jsx-scope": 2, // Prevent missing React when using JSX
     "react/self-closing-comp": 2, // Prevent extra closing tags for components without children
-    "react/wrap-multilines": 2, // Prevent missing parentheses around multilines JSX
   }
 }
