--- a/.eslintrc
+++ b/.eslintrc
@@ -1,42 +1,51 @@
+// Dependencies:
+//
+//
+// npm install babel-eslint (for class-properties)
+// npm install eslint-plugin-react
 {
+  "parser": "babel-eslint",
+
   "env": {
     "browser": true,
     "node": true,
     "es6": true
   },
 
-  "plugins": ["react"],
+  "plugins": [
+    "react"
+  ],
+
+  "globals": {
+    "chrome": true // For writing chrome extensions
+  },
 
   "parserOptions": {
     "sourceType": "module",
     "ecmaFeatures": {
+      "arrowFunctions": true,
+      "binaryLiterals": true,
+      "blockBindings": true,
+      "classes": true,
+      "defaultParams": true,
+      "destructuring": true,
+      "forOf": true,
+      "generators": true,
+      "modules": true,
+      "objectLiteralComputedProperties": true,
+      "objectLiteralDuplicateProperties": true,
+      "objectLiteralShorthandMethods": true,
+      "objectLiteralShorthandProperties": true,
+      "octalLiterals": true,
+      "regexUFlag": true,
+      "regexYFlag": true,
+      "spread": true,
+      "superInFunctions": true,
+      "templateStrings": true,
+      "unicodeCodePointEscapes": true,
+      "globalReturn": true,
       "jsx": true
     }
-  },
-
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "binaryLiterals": true,
-    "blockBindings": true,
-    "classes": true,
-    "defaultParams": true,
-    "destructuring": true,
-    "forOf": true,
-    "generators": true,
-    "modules": true,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralDuplicateProperties": true,
-    "objectLiteralShorthandMethods": true,
-    "objectLiteralShorthandProperties": true,
-    "octalLiterals": true,
-    "regexUFlag": true,
-    "regexYFlag": true,
-    "spread": true,
-    "superInFunctions": true,
-    "templateStrings": true,
-    "unicodeCodePointEscapes": true,
-    "globalReturn": true,
-    "jsx": true
   },
 
   "rules": {
@@ -83,12 +92,12 @@
     "block-scoped-var": 0, // treat var statements as if they were block scoped (off by default). 0: deep destructuring is not compatible https://github.com/eslint/eslint/issues/1863
     "complexity": 0, // specify the maximum cyclomatic complexity allowed in a program (off by default)
     "consistent-return": 2, // require return statements to either always or never specify values
-    "curly": 2, // specify curly brace conventions for all control statements
-    "default-case": 2, // require default case in switch statements (off by default)
+    "curly": 0, // specify curly brace conventions for all control statements
+    "default-case": 0, // require default case in switch statements (off by default)
     "dot-notation": 2, // encourages use of dot notation whenever possible
-    "eqeqeq": 2, // require the use of === and !==
-    "guard-for-in": 2, // make sure for-in loops have an if statement (off by default)
-    "no-alert": 2, // disallow the use of alert, confirm, and prompt
+    "eqeqeq": 0, // require the use of === and !==
+    "guard-for-in": 0, // make sure for-in loops have an if statement (off by default)
+    "no-alert": 0, // disallow the use of alert, confirm, and prompt
     "no-caller": 2, // disallow use of arguments.caller or arguments.callee
     "no-div-regex": 2, // disallow division operators explicitly at beginning of regular expression (off by default)
     "no-else-return": 2, // disallow else after a return in an if (off by default)
@@ -111,7 +120,7 @@
     "no-new-wrappers": 2, // disallows creating new instances of String,Number, and Boolean
     "no-octal": 2, // disallow use of octal literals
     "no-octal-escape": 2, // disallow use of octal escape sequences in string literals, such as var foo = "Copyright \251";
-    "no-param-reassign": 2, // disallow reassignment of function parameters (off by default)
+    "no-param-reassign": 0, // disallow reassignment of function parameters (off by default)
     "no-process-env": 2, // disallow use of process.env (off by default)
     "no-proto": 2, // disallow usage of __proto__ property
     "no-redeclare": 2, // disallow declaring the same variable more then once
@@ -125,7 +134,7 @@
     "no-warning-comments": [0, {"terms": ["todo", "fixme"], "location": "start"}], // disallow usage of configurable warning terms in comments": 2, // e.g. TODO or FIXME (off by default)
     "no-with": 2, // disallow use of the with statement
     "radix": 2, // require use of the second argument for parseInt() (off by default)
-    "vars-on-top": 2, // requires to declare all vars on top of their containing scope (off by default)
+    "vars-on-top": 0, // requires to declare all vars on top of their containing scope (off by default)
     "wrap-iife": 2, // require immediate function invocation to be wrapped in parentheses (off by default)
     "yoda": 2, // require or disallow Yoda conditions
 
@@ -157,7 +166,7 @@
     //
     // These rules are purely matters of style and are quite subjective.
     //
-    "indent": [1, 2], // this option sets a specific tab width for your code (off by default)
+    "indent": [1, 2, {SwitchCase: 1}], // this option sets a specific tab width for your code (off by default)
     "brace-style": 1, // enforce one true brace style (off by default)
     "camelcase": 1, // require camel case names
     "comma-spacing": [1, {"before": false, "after": true}], // enforce spacing before and after comma
@@ -167,13 +176,13 @@
     "func-names": 0, // require function expressions to have a name (off by default)
     "func-style": 0, // enforces use of function declarations or expressions (off by default)
     "key-spacing": [1, {"beforeColon": false, "afterColon": true}], // enforces spacing between keys and values in object literal properties
-    "keyword-spacing": [2, {before: true}], // enforces consistent spacing around keywords and keyword-like tokens:
+    "keyword-spacing": 0, //[0, {before: true}], // enforces consistent spacing around keywords and keyword-like tokens:
     "max-nested-callbacks": [1, 3], // specify the maximum depth callbacks can be nested (off by default)
     "new-cap": [1, {newIsCap: true, capIsNew: false}], // require a capital letter for constructors
     "new-parens": 1, // disallow the omission of parentheses when invoking a constructor with no arguments
     "newline-after-var": 0, // allow/disallow an empty newline after var statement (off by default)
     "no-array-constructor": 1, // disallow use of the Array constructor
-    "no-inline-comments": 1, // disallow comments inline after code (off by default)
+    "no-inline-comments": 0, // disallow comments inline after code (off by default)
     "no-lonely-if": 1, // disallow if as the only statement in an else block (off by default)
     "no-mixed-spaces-and-tabs": 1, // disallow mixed spaces and tabs for indentation
     "no-multiple-empty-lines": [1, {"max": 2}], // disallow multiple empty lines (off by default)
@@ -185,8 +194,8 @@
     "no-underscore-dangle": 1, // disallow dangling underscores in identifiers
     "object-curcly-spacing": 0, // enforce consistent spacing inside braces
     "one-var": [1, "never"], // allow just one var statement per function (off by default)
-    "operator-assignment": [1, "never"], // require assignment operator shorthand where possible or prohibit it entirely (off by default)
-    "padded-blocks": [1, "never"], // enforce padding within blocks (off by default)
+    "operator-assignment": 0, // require assignment operator shorthand where possible or prohibit it entirely (off by default)
+    "padded-blocks": [0, "never"], // enforce padding within blocks (off by default)
     "quote-props": [1, "as-needed"], // require quotes around object literal property names (off by default)
     "quotes": 0, // specify whether double or single quotes should be used
     "semi": [1, "always"], // require or disallow use of semicolons instead of ASI
@@ -204,7 +213,7 @@
     //
     // These rules are only relevant to ES6 environments and are off by default.
     //
-    "no-var": 2, // require let or const instead of var (off by default)
+    "no-var": 0,
     "generator-star-spacing": [2, "before"], // enforce the spacing around the * in generator functions (off by default)
 
     //
@@ -214,12 +223,12 @@
     // While the names of the rules may not match up with the JSHint/JSLint counterpart,
     // the functionality is the same.
     //
-    "max-depth": [2, 3], // specify the maximum depth that blocks can be nested (off by default)
-    "max-len": [2, 100, 2], // specify the maximum length of a line in your program (off by default)
-    "max-params": [2, 5], // limits the number of parameters that can be used in the function declaration. (off by default)
+    "max-depth": [2, 5], // specify the maximum depth that blocks can be nested (off by default)
+    "max-len": 0, // specify the maximum length of a line in your program (off by default)
+    "max-params": [2, 6], // limits the number of parameters that can be used in the function declaration. (off by default)
     "max-statements": 0, // specify the maximum number of statement allowed in a function (off by default)
     "no-bitwise": 0, // disallow use of bitwise operators (off by default)
-    "no-plusplus": 2, // disallow use of unary operators, ++ and -- (off by default)
+    "no-plusplus": 0, // disallow use of unary operators, ++ and -- (off by default)
 
     //
     // eslint-plugin-react
@@ -227,7 +236,6 @@
     // React specific linting rules for ESLint
     //
     "react/display-name": 0, // Prevent missing displayName in a React component definition
-    //"react/jsx-quotes": [2, "double", "avoid-escape"], // Enforce quote style for JSX attributes
     "react/jsx-no-undef": 2, // Disallow undeclared variables in JSX
     "react/jsx-sort-props": 0, // Enforce props alphabetical sorting
     "react/jsx-uses-react": 2, // Prevent React to be incorrectly marked as unused
@@ -237,8 +245,8 @@
     "react/no-did-update-set-state": 2, // Prevent usage of setState in componentDidUpdate
     "react/no-multi-comp": 0, // Prevent multiple component definition per file
     "react/no-unknown-property": 2, // Prevent usage of unknown DOM property
-    "react/prop-types": 2, // Prevent missing props validation in a React component definition
+    "react/prop-types": 0, // Prevent missing props validation in a React component definition
     "react/react-in-jsx-scope": 2, // Prevent missing React when using JSX
-    "react/self-closing-comp": 2, // Prevent extra closing tags for components without children
+    "react/self-closing-comp": 0, // Prevent extra closing tags for components without children
   }
 }
