--- a/.tern-config
+++ b/.tern-config
@@ -18,6 +18,7 @@
     "node": {},
     "complete_strings": {},
     "modules": {},
-    "es_modules": {}
+    "es_modules": {},
+    "chrome-extension": {}
   }
 }
