--- a/home-files/.gitconfig
+++ b/home-files/.gitconfig
@@ -6,11 +6,15 @@
 	ui = true
 
 [core]
-  autocrlf = true
+  autocrlf = input
   fileMode = false
+  ignorecase = false
   excludesfile = ~/.gitignore
-  ; Require npm install -g diff-so-fancy
-  pager = diff-so-fancy | less --tabs=4 -RFX
+  # Install: https://github.com/dandavison/delta
+  pager = delta --dark --file-color="#ffd700" --hunk-color="white" --plus-color="#0e2508" --minus-color="#400707" --theme='Monokai Extended Bright'
+
+[interactive]
+  diffFilter = delta --color-only
 
 [grep]
 	lineNumber = true
@@ -23,21 +27,26 @@
   local = 179
   remote = 46
 
-[color "diff"]
-  meta = yellow bold
-  new = green bold
-  frag = magenta bold
-  whitespace = red reverse
+;[color "diff"]
+;  meta = yellow bold
+;  new = green bold
+;  frag = magenta bold
+;  whitespace = red reverse
 ;  old = 009 bold
 
-[color "diff-highlight"]
-  oldNormal = "red bold"
-  oldHighlight = "red bold 52"
-  newNormal = "green bold"
-  newHighlight = "green bold 22"
+;[color "diff-highlight"]
+;  oldNormal = "red bold"
+;  oldHighlight = "red bold 52"
+;  newNormal = "green bold"
+;  newHighlight = "green bold 22"
 
 [color "status"]
   added = 154
   changed = 203
   untracked = 226
 
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
