--- a/home-files/.gitconfig
+++ b/home-files/.gitconfig
@@ -1,52 +1,42 @@
 [user]
-	email = craigerm@gmail.com
+  email = craigerm@gmail.com
 	name = Craig MacGregor
+
+[init]
+	defaultBranch = main
+
+[core]
+	autocrlf = input
+  fileMode = false
+  ignorecase = false
+  excludesfile = ~/.gitignore
+  pager = delta
 
 [color]
 	ui = true
 
-[core]
-  autocrlf = input
-  fileMode = false
-  ignorecase = false
-  excludesfile = ~/.gitignore
-  # Install: https://github.com/dandavison/delta
-  pager = delta --dark --file-color="#ffd700" --hunk-color="white" --plus-color="#0e2508" --minus-color="#400707" --theme='Monokai Extended Bright'
-
 [interactive]
   diffFilter = delta --color-only
 
+[delta]
+  navigate = true
+  light = false
+
+[merge]
+  conflictstyle = diff3
+
+[diff]
+  colorMoved = default
+
 [grep]
 	lineNumber = true
-
-[alias]
-	g = grep --break --heading --line-number
 
 [color "branch"]
   current = yellow bold
   local = 179
   remote = 46
 
-;[color "diff"]
-;  meta = yellow bold
-;  new = green bold
-;  frag = magenta bold
-;  whitespace = red reverse
-;  old = 009 bold
-
-;[color "diff-highlight"]
-;  oldNormal = "red bold"
-;  oldHighlight = "red bold 52"
-;  newNormal = "green bold"
-;  newHighlight = "green bold 22"
-
 [color "status"]
   added = 154
   changed = 203
   untracked = 226
-
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
